# sfx-batch

./: .gitignore  LICENSE  PROJECT_PROMPT.md  README.md  pyproject.toml  sample_prompts.csv
.clinerules/: documentation_maintenance.md
sfx_batch/: __init__.py  main.py  utils.py
tests/: __init__.py  test_main.py  test_utils.py
